# STANDARD_REPO_TEMPLATE

./: README.md  Taskfile.yml
.github/workflows/: codeql.yml
docs/: explanation.ipynb  pyproject.toml
