[tool.poetry]
name = "repository-documentation"
version = "0.1.0"
description = "repository documentation"
authors = ["Sett Sarverott <sarverott@gmail.com>"]
license = "SEE ../LICENSE file"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
pandas = "^2.3.1"
matplotlib = "^3.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
